Fixed error in chrome where jquery UI accordion displayed scrollbar on hidden viewer overflow

--- a/VwarWeb/Stylesheets/UploadStyle.css
+++ b/VwarWeb/Stylesheets/UploadStyle.css
@@ -268,6 +268,12 @@ a.SnapshotButton:active
 {
     outline: none;
 }
+
+.ui-accordion .ui-accordion-content
+{
+    overflow: hidden;
+}
+
 #DetailsTabs .ui-widget-content
 {
     border: none;
